--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -9,16 +9,36 @@
     "lint": "next lint"
   },
   "dependencies": {
+   "@hookform/resolvers": "^3.3.1",
+    "@radix-ui/react-dropdown-menu": "^2.0.5",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@types/node": "20.6.0",
+    "@types/react": "18.2.21",
+    "@types/react-dom": "18.2.7",
+    "autoprefixer": "10.4.15",
+    "eslint": "8.49.0",
+    "eslint-config-next": "13.4.19",
+    "next-themes": "^0.2.1",
+    "postcss": "8.4.29",
+    "react-hook-form": "^7.47.0",
+    "tailwindcss": "3.3.3",
+    "typescript": "5.2.2",
     "@tanstack/react-query": "^4.29.23",
     "@trpc/client": "^10.42.0",
     "@trpc/react-query": "^10.34.0",
     "@trpc/server": "^10.34.0",
     "api": "1.0.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "lucide-react": "^0.292.0",
     "next": "13.5.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.3",
     "superjson": "^2.2.0",
+    "tailwind-merge": "^2.0.0",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
   },
   "devDependencies": {
