--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -9,9 +9,12 @@
     "@types/better-sqlite3": "^7.6.6",
     "better-sqlite3": "^9.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "drizzle-kit": "^0.20.6",
     "drizzle-orm": "^0.28.6",
     "express": "^4.18.2",
     "superjson": "^2.2.0",
+    "supertokens-node": "^16.6.4",
     "zod": "^3.22.4"
   },
   "scripts": {
