--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -4,17 +4,19 @@
   "main": "src/index.ts",
   "license": "MIT",
   "dependencies": {
+    "@fastify/cors": "^8.5.0",
+    "@fastify/websocket": "^8.3.1",
     "@paralleldrive/cuid2": "^2.2.2",
-    "@trpc/server": "^10.42.0",
+    "@supabase/supabase-js": "^2.39.3",
+    "@trpc/server": "next",
     "@types/better-sqlite3": "^7.6.6",
     "better-sqlite3": "^9.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "drizzle-kit": "^0.20.6",
     "drizzle-orm": "^0.28.6",
-    "express": "^4.18.2",
+    "fastify": "^4.25.2",
     "superjson": "^2.2.0",
-    "supertokens-node": "^16.6.4",
     "zod": "^3.22.4"
   },
   "scripts": {
