--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -6,11 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "ui:add": "pnpm dlx shadcn-ui@latest add"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.3.1",
-    "@radix-ui/react-dropdown-menu": "^2.0.5",
+    "@t3-oss/env-nextjs": "^0.7.3",
+    "@hookform/resolvers": "^3.3.4",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@supabase/auth-helpers-nextjs": "^0.8.7",
@@ -30,15 +32,16 @@
     "eslint": "8.56.0",
     "eslint-config-next": "14.0.4",
     "lucide-react": "^0.312.0",
-    "next": "13.5.6",
+    "next": "14.0.4",
     "next-themes": "^0.2.1",
     "postcss": "8.4.33",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.49.3",
-    "superjson": "^2.2.0",
-    "tailwind-merge": "^2.0.0",
-    "tailwindcss": "3.3.3",
+    "sonner": "^1.3.1",
+    "superjson": "^2.2.1",
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss": "3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.3.3",
     "zod": "^3.22.4"
