--- a/.env
+++ b/.env
@@ -7,9 +7,11 @@
 # @see https://www.prisma.io/docs/reference/database-reference/connection-urls
 # @see https://supabase.com/docs/guides/integrations/prisma#connection-pooling-with-supabase
 # PostgreSQL connection string with pgBouncer config — used by Prisma Client
-DATABASE_URL="postgres://postgres.ylqahycxikzkqhpesmfx:Ij5i8zflX0BW64JC@aws-0-eu-central-1.pooler.supabase.com:6543/postgres?pgbouncer=true&connection_limit=1"
-# PostgreSQL connection string used for migrations
-DIRECT_URL="postgresql://postgres:Ij5i8zflX0BW64JC@db.ylqahycxikzkqhpesmfx.supabase.co:5432/postgres"
+DIRECT_URL="postgres://postgres.ylqahycxikzkqhpesmfx:Ij5i8zflX0BW64JC@aws-0-eu-central-1.pooler.supabase.com:5432/postgres"
+DB_HOST='aws-0-eu-central-1.pooler.supabase.com'
+DB_NAME='postgres'
+DB_USERNAME='postgres.ylqahycxikzkqhpesmfx'
+DB_PASSWORD='Ij5i8zflX0BW64JC'
 
 # Supabase
 NEXT_PUBLIC_SUPABASE_URL="https://ylqahycxikzkqhpesmfx.supabase.co"
