--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -2,34 +2,38 @@
   "name": "api",
   "version": "1.0.0",
   "main": "src/index.ts",
+  "type": "module",
   "license": "MIT",
   "dependencies": {
-    "@fastify/cors": "^8.5.0",
-    "@fastify/websocket": "^8.3.1",
-    "@types/cors": "^2.8.17",
+    "@fastify/cors": "^9.0.1",
+    "@fastify/websocket": "^10.0.1",
     "@paralleldrive/cuid2": "^2.2.2",
-    "tsx": "^4.7.0",
-    "@supabase/supabase-js": "^2.39.3",
+    "@supabase/supabase-js": "^2.42.0",
+    "@t3-oss/env-core": "^0.9.2",
     "@trpc/server": "next",
-    "@types/better-sqlite3": "^7.6.8",
-    "better-sqlite3": "^9.3.0",
+    "@types/cors": "^2.8.17",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "drizzle-kit": "^0.20.13",
-    "drizzle-orm": "^0.29.3",
-    "fastify": "^4.25.2",
+    "dotenv": "^16.4.5",
+    "dotenv-cli": "^7.4.1",
+    "drizzle-kit": "^0.20.14",
+    "drizzle-orm": "^0.30.7",
+    "fastify": "^4.26.2",
+    "postgres": "^3.4.4",
     "superjson": "^2.2.1",
+    "tsx": "^4.7.1",
     "zod": "^3.22.4"
   },
   "scripts": {
-    "dev": "tsx watch src/index.ts",
-    "generate": "drizzle-kit generate:sqlite"
+    "dev": "pnpm with-env tsx watch src/index.ts",
+    "generate": "pnpm with-env drizzle-kit generate:pg",
+    "push": "pnpm with-env drizzle-kit push:pg",
+    "with-env": "dotenv -e ../../.env --"
   },
   "devDependencies": {
-    "@types/node": "^20.11.5",
-    "eslint": "^8.56.0",
-    "prettier": "^3.2.4",
+    "@types/node": "^20.12.3",
+    "eslint": "^8.57.0",
+    "prettier": "^3.2.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.4.3"
   }
 }
