--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -8,7 +8,7 @@
     "@fastify/cors": "^9.0.1",
     "@fastify/websocket": "^10.0.1",
     "@paralleldrive/cuid2": "^2.2.2",
-    "@supabase/supabase-js": "^2.42.0",
+    "@supabase/supabase-js": "^2.42.4",
     "@t3-oss/env-core": "^0.9.2",
     "@trpc/server": "next",
     "@types/cors": "^2.8.17",
@@ -16,11 +16,11 @@
     "dotenv": "^16.4.5",
     "dotenv-cli": "^7.4.1",
     "drizzle-kit": "^0.20.14",
-    "drizzle-orm": "^0.30.7",
+    "drizzle-orm": "^0.30.8",
     "fastify": "^4.26.2",
     "postgres": "^3.4.4",
     "superjson": "^2.2.1",
-    "tsx": "^4.7.1",
+    "tsx": "^4.7.2",
     "zod": "^3.22.4"
   },
   "scripts": {
@@ -30,10 +30,10 @@
     "with-env": "dotenv -e ../../.env --"
   },
   "devDependencies": {
-    "@types/node": "^20.12.3",
-    "eslint": "^8.57.0",
+    "@types/node": "^20.12.7",
+    "eslint": "8.57.0",
     "prettier": "^3.2.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.3"
+    "typescript": "^5.4.5"
   }
 }
