--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -10,50 +10,53 @@
     "ui:add": "pnpm dlx shadcn-ui@latest add"
   },
   "dependencies": {
-    "@t3-oss/env-nextjs": "^0.9.2",
     "@hookform/resolvers": "^3.3.4",
+    "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
-    "@supabase/auth-helpers-nextjs": "^0.9.0",
-    "@supabase/auth-helpers-react": "^0.4.2",
-    "@supabase/supabase-js": "^2.42.0",
-    "@tanstack/react-query": "^5.28.14",
+    "@radix-ui/react-tooltip": "^1.0.7",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/auth-helpers-react": "^0.5.0",
+    "@supabase/supabase-js": "^2.42.4",
+    "@t3-oss/env-nextjs": "^0.9.2",
+    "@tanstack/react-query": "^5.29.2",
     "@trpc/client": "next",
     "@trpc/react-query": "next",
     "@trpc/server": "next",
-    "@types/node": "20.12.3",
-    "@types/react": "18.2.74",
-    "@types/react-dom": "18.2.23",
+    "@types/node": "20.12.7",
+    "@types/react": "18.2.79",
+    "@types/react-dom": "18.2.25",
     "api": "workspace:^1.0.0",
     "autoprefixer": "10.4.19",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "eslint": "8.57.0",
-    "eslint-config-next": "14.1.4",
-    "lucide-react": "^0.364.0",
-    "next": "14.1.4",
+    "eslint": "9.0.0",
+    "eslint-config-next": "14.2.1",
+    "lucide-react": "^0.368.0",
+    "next": "14.2.1",
     "next-themes": "^0.3.0",
     "postcss": "8.4.38",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.51.2",
+    "react-hook-form": "^7.51.3",
     "sonner": "^1.4.41",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.2.2",
     "tailwindcss": "3.4.3",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.4.3",
+    "typescript": "5.4.5",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/node": "20.12.3",
-    "@types/react": "18.2.74",
+    "@types/node": "20.12.7",
+    "@types/react": "18.2.79",
     "autoprefixer": "^10.4.19",
     "eslint": "8.57.0",
-    "eslint-config-next": "14.1.4",
+    "eslint-config-next": "14.2.1",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
-    "typescript": "5.4.3"
+    "typescript": "5.4.5"
   }
 }
