--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -22,6 +22,7 @@
     "@supabase/supabase-js": "^2.42.4",
     "@t3-oss/env-nextjs": "^0.9.2",
     "@tanstack/react-query": "^5.29.2",
+    "@tanstack/react-query-devtools": "^5.29.2",
     "@trpc/client": "next",
     "@trpc/react-query": "next",
     "@trpc/server": "next",
@@ -32,7 +33,7 @@
     "autoprefixer": "10.4.19",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "eslint": "9.0.0",
+    "eslint": "8.57.0",
     "eslint-config-next": "14.2.1",
     "lucide-react": "^0.368.0",
     "next": "14.2.1",
